Fixed run_mobile.sh